Fixed a compile error